hrp reply email slightly changes

--- a/website/06-Stories-HRP/emails/reply_hrp.html
+++ b/website/06-Stories-HRP/emails/reply_hrp.html
@@ -37,7 +37,7 @@ div.WordSection1
 
 <p><span style='font-family:
 Helvetica;color:#393939'>Thank you {{form::name}},<br>
-for your submission to <em>GC Human Rights Preparedness</em>!
+for your submission to the GC <em>Human Rights Preparedness</em> initiative!
 <br /><br />
 The submission will now be sent out for light-touch review.
 <br>
