fixes for graz University

--- a/website/02-Education/ema/faculty-part2.html
+++ b/website/02-Education/ema/faculty-part2.html
@@ -4,7 +4,7 @@
 <p class="margin_bottom_20"><strong>Universities and National Programme Directors</strong></p>
 <ol class="list margin_bottom_20">
 <li><a class="titolo_gc_europe" href="https://www.univie.ac.at/en/" target="_blank">University of Vienna</a>, Austria - <a class="titolo_gc_europe" href="https://eur-int-comp-law.univie.ac.at/en/team/external-lecturers/binder-christina/" target="_blank">Prof. Dr. Christina Binder</a></li>
-<li><a class="titolo_gc_europe" href="http://www.etc-graz.at/" target="_blank">University of Graz</a>, Austria - <a class="titolo_gc_europe" href="http://www.etc-graz.at/typo3/index.php?id=757" target="_blank">Prof. Dr. Gerd Oberleitner</a></li>
+<li><a class="titolo_gc_europe" href="https://www.uni-graz.at/en/" target="_blank">University of Graz</a>, Austria - <a class="titolo_gc_europe" href=" https://trainingszentrum-menschenrechte.uni-graz.at/en/unesco-chair/" target="_blank">Prof. Dr. Gerd Oberleitner</a></li>
 <li><a class="titolo_gc_europe" href="https://www.kuleuven.be/" target="_blank">KU Leuven</a>, Belgium - <a class="titolo_gc_europe" href="https://www.kuleuven.be/wieiswie/en/person/00071951" target="_blank">Prof. Koen Lemmens</a></li>
 <li><a class="titolo_gc_europe" href="http://www.ulb.ac.be/" target="_blank">Université Libre de Bruxelles (ULB)</a>, Belgium - <a class="titolo_gc_europe" href="https://fr.wikipedia.org/wiki/Guy_Haarscher" target="_blank">Prof. Guy Haarscher</a></li>
 <li><a class="titolo_gc_europe" href="http://www.law.uni-sofia.bg/" target="_blank">Sofia University St Kliment Ohridski</a>, Bulgaria - <a class="titolo_gc_europe" href="https://law.uni-sofia.bg/" target="_blank">Prof. Boriana Musseva</a></li>
