faculty chra update

--- a/website/02-Education/ieo/faculty.html
+++ b/website/02-Education/ieo/faculty.html
@@ -105,6 +105,27 @@
             </div>
         </div>
     </div> -->
+    <div class="table_people_cell"><img class="img_persona" src="files/eiuc/chra/2020/Zara_Balfour_chra.jpg" alt="Zara Balfour - Global Campus">
+        <div class="description_page_programme no_border no_padding no_margin_bottom">
+            <!-- <p class="ruolo_persona titolo_gc_europe">Dartmouth Films Founder and Managing Director</p> -->
+            <p class="subtitle_page_programme margin_bottom_20">Zara Balfour</p>
+            <p class="margin_bottom_20">Zara is an award-winning director, writer and producer. She has filmed in over 20 countries, often documenting community projects in developing countries. Zara began her carreer as an actress before moving behind the camera. </p>
+            <div class="text_read_more">
+                <p class="margin_bottom_20">She worked with Sophie Fiennes on a programme for BBC Storyville, going on to produce and/or direct short film, TV commercials and documentary content. She then moved into longer format storytelling: directing documentaries and writing. </p>
+                <p class="margin_bottom_20">Her first feature documentary ?Children of the Snow Land? Won the BIFA Raindance Discovery Award 2019, a Grierson Award shortlist, two Screen Awards nominations, One World Media Awards longlist, 20 festival awards, 60 UK cinema screenings, TV broadcasts including Arte, NHK, UR and VOD on Curzon Home Cinema.</p>
+                <p>Zara’s earlier short films won awards at Berlin Film Festival, London Film Festival, European Film Awards, Creative Review and Cannes Lions. Zara has been featured on BBC Woman’s Hour, BBC World, Talk Radio and she is a Fellow of the Royal Geographical Society.</p>
+            </div>
+            <div class="accordion accordion_gc_south_europe read_more">
+                <div class="icon_e_title_accordion">
+                    <div class="piu_accordion">
+                        <div class="verticale">[nbsp]</div>
+                        <div class="orizzontale">[nbsp]</div>
+                    </div>
+                    <p class="title_accordion more_less">Read More</p>
+                </div>
+            </div>
+        </div>
+    </div>
     <div class="table_people_cell"><img class="img_persona" src="files/eiuc/chra/2018/Christopher_Hird_global_campus_eiuc.jpg" alt="Christopher Hird - Global Campus">
         <div class="description_page_programme no_border no_padding no_margin_bottom">
             <p class="ruolo_persona titolo_gc_europe">Dartmouth Films Founder and Managing Director</p>
@@ -114,6 +135,27 @@
                 <p class="margin_bottom_20">He is currently a trustee of the Grierson Trust (www.griersontrust.org) the Wincott Foundation (www.wincott.co.uk) and the Centre for Investigative Journalism (www.tcij.org/)</p>
                 <p class="margin_bottom_20">Christopher is also the Managing Editor at the Bureau of Investigative Journalism (www.thebureauinvestigates.com).</p>
                 <p>Christo's most recent projects include: Utopia, The End of the Line, The Shadows of War, Fire in the Blood, The War You Don't See.</p>
+            </div>
+            <div class="accordion accordion_gc_south_europe read_more">
+                <div class="icon_e_title_accordion">
+                    <div class="piu_accordion">
+                        <div class="verticale">[nbsp]</div>
+                        <div class="orizzontale">[nbsp]</div>
+                    </div>
+                    <p class="title_accordion more_less">Read More</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="table_people_cell"><img class="img_persona" src="files/eiuc/chra/2020/Reina-Marie_loader_chra.jpg" alt="Reina-Marie Loader - Global Campus">
+        <div class="description_page_programme no_border no_padding no_margin_bottom">
+            <!-- <p class="ruolo_persona titolo_gc_europe">WITNESS Programme Manager</p> -->
+            <p class="subtitle_page_programme margin_bottom_20">Reina-Marie Loader</p>
+            <p class="margin_bottom_20">Dr. Reina-Marie Loader joined the Global Campus in 2019 to coordinate child rights projects under the GC-RLF cooperation. Previously, she worked as a filmmaker specialised in approaching human rights issues through film.</p>
+            <div class="text_read_more">
+                <p class="margin_bottom_20">Her films have regularly been shown at international film festivals and conferences, while also receiving several awards and nominations for their socio-political and ecological impact. She has lectured on the socio-political dimensions of film at several universities, including Exeter, Reading and Vienna.</p>
+                <p class="margin_bottom_20">At the University of Reading, she completed a practice-led PhD in film on the ethical representation of traumatic memory on screen.</p>
+                <p>This research has awarded her a nomination from the British Universities Film and Video Council for a Learning on Screen Award. In 2018, Reina completed an MA in Human Rights at the University of Vienna focused on Ubuntu and children deprived of liberty.</p>
             </div>
             <div class="accordion accordion_gc_south_europe read_more">
                 <div class="icon_e_title_accordion">
@@ -156,6 +198,25 @@
                 <p class="margin_bottom_20">In addition, he is Professor for International Human Rights at the University of Vienna, where he is the scientific director of the Vienna Master of Arts in Human Rights and co-director of the Ludwig Boltzmann Institute for Human Rights. In October 2016, he was appointed as independent expert leading the UN Global Study on Children Deprived of Liberty.</p>
                 <p class="margin_bottom_20">Aside from Vienna University, Manfred Nowak was Professor of International Law and Human Rights at various prestigious universities, such as Utrecht, Lund, Stanford and the Graduate Institute in Geneva, and has published more than 600 books and articles in this field, including various language editions of the CCPR-Commentary, a CAT-Commentary and an introduction to the International Human Rights Regime. He has carried out various expert functions for the UN, the Council of Europe, the EU and other inter-governmental organizations.</p>
                 <p class="margin_bottom_20">Most importantly, he served for many years in various functions as UN Expert on Enforced Disappearances (1993 to 2006), as one of eight international judges in the Human Rights Chamber for Bosnia and Herzegovina in Sarajevo (1996 to 2003), and as UN Special Rapporteur on Torture (2004 to 2010).</p>
+            </div>
+            <div class="accordion accordion_gc_south_europe read_more">
+                <div class="icon_e_title_accordion">
+                    <div class="piu_accordion">
+                        <div class="verticale">[nbsp]</div>
+                        <div class="orizzontale">[nbsp]</div>
+                    </div>
+                    <p class="title_accordion more_less">Read More</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="table_people_cell"><img class="img_persona" src="files/eiuc/chra/2020/Laura_Townshend_chra.jpg" alt="Laura Townshend - Global Campus">
+        <div class="description_page_programme no_border no_padding no_margin_bottom">
+            <!-- <p class="ruolo_persona titolo_gc_europe">Global Campus of Human Rights Secretary General</p> -->
+            <p class="subtitle_page_programme margin_bottom_20">Laura Townshend</p>
+            <p class="margin_bottom_20">Laura is a digital communications leader with twelve years of experience in social change campaigns. She currently works as a coach and consultant, helping purpose-driven organisations achieve their goals with human, strategic, clear communication.</p>
+            <div class="text_read_more">
+                <p class="margin_bottom_20">As Campaigns, Growth and Income Director at 38 Degrees, a progressive online mobilisation platform, she led some of the organisation's biggest campaigns that changed government policy and won awards. She's also worked as Head of Media at a campaigning homelessness charity, and served on the board of a feminist digital campaigning organisation.</p>
             </div>
             <div class="accordion accordion_gc_south_europe read_more">
                 <div class="icon_e_title_accordion">
