Fixes to staff (Wiebke and Chiara bios) and Bando mensa

--- a/website/04-About-us/Staff/Europe/staff-part1.html
+++ b/website/04-About-us/Staff/Europe/staff-part1.html
@@ -1,26 +1,6 @@
-<p class="subtitle_page_programme">Who's Who</p>
+<p class="subtitle_page_programme">GC Europe Staff</p>
+<p class="margin_bottom_20">Our team is led by the master’s program director and is comprised of academic and administrative staff members. They ensure smooth implementation of the programme including coordination of teaching faculty, student support during the Venice-based semester and the mobility semester, and compliance with policies and regulations.</p>
 <div class="table_accordion">
-    <div class="table_people_cell"><img class="img_persona" src="files/eiuc/ema/Therese_Murphy_gchumanrights3.png" alt="Prof. Thérèse Murphy - Global Campus">
-        <div class="description_page_programme no_border no_padding no_margin_bottom">
-            <p class="ruolo_persona titolo_gc_europe"><span class="maiuscoletto">EMA</span> Chairperson</p>
-            <p class="subtitle_page_programme margin_bottom_20">Prof. Thérèse Murphy</p>
-            <p class="margin_bottom_20">Thérèse Murphy is chairperson of the European Master's on Human Rights and Democratisation, and sits on the Council of the Global Campus of Human Rights. She is professor of law at Queen’s University Belfast.</p>
-            <div class="text_read_more">
-                <p class="margin_bottom_20">Her work focuses on human rights law and practice. She is particularly interested in questions concerning health and human rights, including the right to science and the relationship between new technologies and human rights. She is also interested in human rights method.</p>
-                <p class="margin_bottom_20">She has been a Fulbright Scholar at Harvard Law School, a Holding Redlich Distinguished Visiting Fellow at Monash University, a Visiting Research Professor at the Law [&amp;] Innovation Group at Newcastle University, and both a Jean Monnet Fellow and a Fernand Braudel Senior Fellow at the European University Institute. Her work has also won awards from two of the UK’s Research Councils and from the Canadian High Commission.</p>
-                <p class="margin_bottom_20">Thérèse’s books include <em>The United Nations Special Procedures System; European Law and New Health Technologies; Civil Liberties Law: The Human Rights Act Era</em>; and <em>New Technologies and Human Rights</em>. Her book, <em>Health and Human Rights</em>, marked 10 years of the Hart/Bloomsbury series 'Human Rights Law in Perspective'.</p>
-            </div>
-            <div class="accordion accordion_gc_south_europe read_more">
-                <div class="icon_e_title_accordion">
-                    <div class="piu_accordion">
-                        <div class="verticale">[nbsp]</div>
-                        <div class="orizzontale">[nbsp]</div>
-                    </div>
-                    <p class="title_accordion more_less">Read More</p>
-                </div>
-            </div>
-        </div>
-    </div>
     <div class="table_people_cell"><img class="img_persona" src="files/eiuc/ema/wiebke-lamer-eiuc-global-campus.jpg" alt="Dr. Wiebke Lamer - Global Campus">
         <div class="description_page_programme no_border no_padding no_margin_bottom">
             <p class="ruolo_persona titolo_gc_europe"><span class="maiuscoletto">EMA</span> Programme Director</p>
