CHRA Update Faculty - Minor fixes to Bando Mensa

--- a/website/02-Education/chra/faculty-2020-new.html
+++ b/website/02-Education/chra/faculty-2020-new.html
@@ -105,6 +105,26 @@
             </div>
         </div>
     </div> -->
+    <div class="table_people_cell"><img class="img_persona" src="files/eiuc/chra/2020/Tsering_Diki_chra_gchumanrights.jpg" alt="Tsering Diki- Global Campus">
+        <div class="description_page_programme no_border no_padding no_margin_bottom">
+            <!-- <p class="ruolo_persona titolo_gc_europe">Dartmouth Films Founder and Managing Director</p> -->
+            <p class="subtitle_page_programme margin_bottom_20">Tsering Diki</p>
+            <p class="margin_bottom_20">Tsering Diki was born in the remote High Himalayas of Nepal and was sent by her parents to the capital city, Kathmandu, at the age of 4, in the hope that education would give her a better chance in life. For 12 years she lived and studied at Snowland school in the city, receiving a free education but unable to see or speak to her parents, due to the remoteness of her village.</p>
+            <div class="text_read_more">
+                <p class="margin_bottom_20">After completing her secondary education at Snowland Ranag Light of Education School, Tsering Diki, aged 16, trekked the long journey home across the Himalayan mountains to reconnect with her parents who she hadn’t seen for 12 years.  She documented her journey in the award-winning feature documentary film, Children of the Snow Land, directed by UK filmmakers who taught Tsering Diki to self-film and present her life story on camera. Whilst in her home village, Tsering Diki developed a passion for human rights, as a result of seeing the young girls and women of her region, Humla, doing the majority of work both at home and farming in the field, living a subsistence lifestyle without knowledge of basic healthcare and menstruation.  Tsering Diki provided lessons to local women about the significant factors of health issues. Returning to the city to complete higher secondary education, Tsering Diki studied humanities and mass communication at Canvas International College, whilst working at Snowland School as a volunteer teacher to educate younger children about their villages and to help them understand why they were sent away from home at such a young age. Tsering also volunteered at TGIF helping to organise a fashion show, which sparked her interest in fashion and a desire to help the women of her region to develop self-sustaining businesses through fashion. </p>
+                <p class="margin_bottom_20">Tsering is now studying fashion design in Kathmandu and intends to start a business designing garments and products using local fabrics to provide employment opportunities and better human rights to the women of Humla. She also hopes to preserve the cultural dress of her region by taking inspiration from local dressing styles in her designs. She is partnering with UK-based NGO, Snowland Journeys CIC, in this self-sustainable fashion programme and is keen to make more people aware of her region and the challenges of local women and girls. Tsering Diki is an energetic, ambitious person who has developed a mature and responsible approach to life.  She believes in practical learning as a good platform to gain inner skill and she embraces constant experience. </p>
+            </div>
+            <div class="accordion accordion_gc_south_europe read_more">
+                <div class="icon_e_title_accordion">
+                    <div class="piu_accordion">
+                        <div class="verticale">[nbsp]</div>
+                        <div class="orizzontale">[nbsp]</div>
+                    </div>
+                    <p class="title_accordion more_less">Read More</p>
+                </div>
+            </div>
+        </div>
+    </div>
     <div class="table_people_cell"><img class="img_persona" src="files/eiuc/chra/2018/Christopher_Hird_global_campus_eiuc.jpg" alt="Christopher Hird - Global Campus">
         <div class="description_page_programme no_border no_padding no_margin_bottom">
             <p class="ruolo_persona titolo_gc_europe">Dartmouth Films Founder and Managing Director</p>
