Added Bios and Pics for Project Team

--- a/website/02-Education/HRC-UNTL/07-People-part1.html
+++ b/website/02-Education/HRC-UNTL/07-People-part1.html
@@ -1,16 +1,53 @@
 <p class="subtitle_page_programme">Project Team</p>
-<p class="margin_bottom_20">Adriano Remiddi - Project Manager</p>
-<p class="margin_bottom_20">
-    Dr. Li Li Chen - Academic Officer
-    <br>
-    Jelena Vukobrat - Administrative Officer
-    <br>
-    Adi Santos - Assistant
-    <br>
-    Alì Ghulam - Logistical Officer
-</p>
-<p class="margin_bottom_20">
-    Dr. Michael Hayes - GC Asia-Pacific Program Director, Institute of Human Rights and Peace Studies, Mahidol University
-    <br>
-    Dr. Yanuar Sumarlan - Institute of Human Rights and Peace Studies, Mahidol University
-</p>
+<div class="table_accordion">
+    <div class="table_people_cell"><img class="img_persona" src="files/eiuc/hrc/people/Adriano_Remiddi_gchumanrights.jpg" alt="Adriano Remiddi- Global Campus">
+        <div class="description_page_programme no_border no_padding no_margin_bottom">
+            <p class="ruolo_persona titolo_gc_asia_pacific">Project Manager</p>
+            <p class="subtitle_page_programme margin_bottom_20">Adriano Remiddi</p>
+            <p class="margin_bottom_20">Former coordinator of the GC South East Europe Programme for the University of Bologna in Sarajevo, Adriano is in charge of the overall designing and implementation of the project, with the support of key offices and colleagues of the GC headquarters in Venice, the GC Asia-Pacific regional hub, and the project team in Dili.</p>
+            <p>For information: <a href="mailto:adriano.remiddi@gchumanrights.org" class="titolo_gc_asia_pacific">adriano.remiddi@gchumanrights.org</a></p>
+        </div>
+    </div>
+    <div class="table_people_cell"><img class="img_persona" src="files/eiuc/hrc/people/Li_Li_Chen_gchumanrights.jpg" alt="Dr. Li Li Chen - Global Campus">
+        <div class="description_page_programme no_border no_padding no_margin_bottom">
+            <p class="ruolo_persona titolo_gc_asia_pacific">Project Officer</p>
+            <p class="subtitle_page_programme margin_bottom_20">Dr. Li Li Chen</p>
+            <p class="margin_bottom_20">Ph.D in Political Science at the University of Florida and visiting Professor at the UNTL in Dili, Li Li supports the organization of the academic operations of the project, especially its extra-curricular activities and the creation of the Centre’s library. Li Li also helps the project to liaise with UNTL bodies and other local civil society partners.</p>
+        </div>
+    </div>
+    <div class="table_people_cell"><img class="img_persona" src="files/eiuc/hrc/people/Jelena_Vukobrat_gchumanrights.jpg" alt="Jelena Vukobrat - Global Campus">
+        <div class="description_page_programme no_border no_padding no_margin_bottom">
+            <p class="ruolo_persona titolo_gc_asia_pacific">Project Officer</p>
+            <p class="subtitle_page_programme margin_bottom_20">Jelena Vukobrat</p>
+            <p class="margin_bottom_20">Coordinator at the Henrich Boll Stiftung - Bosnia and Herzegovina and an alumna of the Global Campus, Jelena supports the project management cycle as well as the development of the training programmes and the study materials, especially in the creation of the new human rights textbook. Jelena also contributes to the shaping of the "Human Rights & Cinema" format.</p>
+        </div>
+    </div>
+    <div class="table_people_cell"><img class="img_persona" src="files/eiuc/hrc/people/Adi_Madalena_Dos_Santos_gchumanrights.jpg" alt="Senhorina (Adi) Madalena dos Santos - Global Campus">
+        <div class="description_page_programme no_border no_padding no_margin_bottom">
+            <p class="ruolo_persona titolo_gc_asia_pacific">Project Assistant</p>
+            <p class="subtitle_page_programme margin_bottom_20">Senhorina (Adi) Madalena dos Santos</p>
+            <p class="margin_bottom_20">Youth activist and BA holder from UNTL Faculty of Social Sciences, Adi helps with the manifold office work practical aspects, as well as with the organization of events and activities, including trainings and communication. Adi also helps in liaising the project to the students and activists local community.</p>
+        </div>
+    </div>
+    <div class="table_people_cell"><img class="img_persona" src="files/eiuc/hrc/people/Alì_Ghulam_gchumanrights.jpg" alt="Alì Ghulam - Global Campus">
+        <div class="description_page_programme no_border no_padding no_margin_bottom">
+            <p class="ruolo_persona titolo_gc_asia_pacific">Logistical Officer</p>
+            <p class="subtitle_page_programme margin_bottom_20">Alì Ghulam</p>
+            <p class="margin_bottom_20">Youth activist and BA holder from UNTL Faculty of Social Sciences, Adi helps with the manifold office work practical aspects, as well as with the organization of events and activities, including trainings and communication. Adi also helps in liaising the project to the students and activists local community.</p>
+        </div>
+    </div>
+    <div class="table_people_cell"><img class="img_persona" src="files/eiuc/apma/lecturers/Mike_Hayes_gchumanrights.jpg" alt="Dr. Michael Hayes - Global Campus">
+        <div class="description_page_programme no_border no_padding no_margin_bottom">
+            <p class="ruolo_persona titolo_gc_asia_pacific">GC Asia-Pacific Programme Director</p>
+            <p class="subtitle_page_programme margin_bottom_20">Dr. Michael Hayes</p>
+            <p class="margin_bottom_20">A senior human rights scholar at the IHRP-MU Institute of Human Rights and Peace Studies, Mahidol University (Bangkok), Mike acts as the main academic and implementation advisor to the project manager, as well as the focal point for the integration of the future UNTL-HRC within the GC Asia-Pacific network.</p>
+        </div>
+    </div>
+    <div class="table_people_cell"><img class="img_persona" src="files/eiuc/apma/lecturers/Yanuar_Sumarlan_gchumanrights.jpg" alt="Dr. Yanuar Sumarla - Global Campus">
+        <div class="description_page_programme no_border no_padding no_margin_bottom">
+            <p class="ruolo_persona titolo_gc_asia_pacific">GC Asia-Pacific Programme Lecturer</p>
+            <p class="subtitle_page_programme margin_bottom_20">Dr. Yanuar Sumarlan</p>
+            <p class="margin_bottom_20">A human rights scholar at the IHRP-MU, Yanuar acts as academic tutor to the six Timorese Human Rights Defenders (Group 1) who joined the GC APMA master’s programme, supporting their preparatory studies and overseeing their academic year and performance.</p>
+        </div>
+    </div>
+</div>
