fixes to people HRC

--- a/website/02-Education/HRC-UNTL/07-People-part1.html
+++ b/website/02-Education/HRC-UNTL/07-People-part1.html
@@ -19,7 +19,7 @@
         <div class="description_page_programme no_border no_padding no_margin_bottom">
             <p class="ruolo_persona titolo_gc_asia_pacific">Project Officer</p>
             <p class="subtitle_page_programme margin_bottom_20">Jelena Vukobrat</p>
-            <p class="margin_bottom_20">Coordinator at the Henrich Boll Stiftung - Bosnia and Herzegovina and an alumna of the Global Campus, Jelena supports the project management cycle as well as the development of the training programmes and the study materials, especially in the creation of the new human rights textbook. Jelena also contributes to the shaping of the "Human Rights & Cinema" format.</p>
+            <p class="margin_bottom_20">.Coordinator at the Henrich Boll Stiftung – Sarajevo Office, and an alumna of the Global Campus, between July 2019 and September 2020, Jelena supported the project cycle management, as well as the development of training programmes and study materials. She continues coordinating the process of the creation of the new human rights textbook and curating the "Human Rights & Cinema" programme.</p>
         </div>
     </div>
     <div class="table_people_cell"><img class="img_persona" src="files/eiuc/hrc/people/Adi_Madalena_Dos_Santos_gchumanrights.jpg" alt="Senhorina (Adi) Madalena dos Santos - Global Campus">
@@ -33,7 +33,7 @@
         <div class="description_page_programme no_border no_padding no_margin_bottom">
             <p class="ruolo_persona titolo_gc_asia_pacific">Logistical Officer</p>
             <p class="subtitle_page_programme margin_bottom_20">Alì Ghulam</p>
-            <p class="margin_bottom_20">Youth activist and BA holder from UNTL Faculty of Social Sciences, Adi helps with the manifold office work practical aspects, as well as with the organization of events and activities, including trainings and communication. Adi also helps in liaising the project to the students and activists local community.</p>
+            <p class="margin_bottom_20">An experienced professional in the hospitality and operations sector, Alì temporarily joined the team being of crucial support for the supervision of the refurbishment works of the new Centre premises,  and for the organization of the its inauguration event.</p>
         </div>
     </div>
     <div class="table_people_cell"><img class="img_persona" src="files/eiuc/apma/lecturers/Mike_Hayes_gchumanrights.jpg" alt="Dr. Michael Hayes - Global Campus">
