New governace page and facts and figures fixes

--- a/website/04-About-us/governance/governance-part3.html
+++ b/website/04-About-us/governance/governance-part3.html
@@ -1,4 +1,6 @@
-<p class="subtitle_page_programme">Global Campus Council Composition</p>
+<p class="subtitle_page_programme">Council</p>
+<p class="margin_bottom_20">The Council (board of administrators) has the general powers of extraordinary and ordinary administration (except for matters reserved to the Assembly), and adopts the annual work programme, budget and financial statement of the Global Campus.</p>
+<div class="text_read_more">
 <p class="margin_bottom_20">The Global Campus Council for 2019-2023 includes the following 15 members:</p>
 <ul class="lista_con_pallini margin_bottom_20">
 	<li>Veronica Gomez, University of San Martin (Buenos Aires), GC President and representative of GC Latin America and Caribbean </li>
@@ -17,3 +19,13 @@
 	<li>Ravi Prakash Vyas, Kathmandu School of Law</li>
 	<li>Carlos Joel Zelada Acuna, Universidad del Pacifico (Lima)</li>
 </ul>
+</div>
+<div class="accordion accordion_gc_arab read_more">
+    <div class="icon_e_title_accordion">
+        <div class="piu_accordion">
+            <div class="verticale">[nbsp]</div>
+            <div class="orizzontale">[nbsp]</div>
+        </div>
+        <p class="title_accordion more_less">Read More</p>
+    </div>
+</div>
