--- a/website/04-About-us/governance/governance-part4.html
+++ b/website/04-About-us/governance/governance-part4.html
@@ -1,16 +1,30 @@
-<p class="subtitle_page_programme">Global Campus Advisory Board</p>
-<p class="margin_bottom_20">The GC Statute provides for an Advisory Board composed of representatives of important partner organisations or eminent human rights experts proposed by regional hubs.</p>
-<p class="margin_bottom_20">Representatives of international, regional, national, and non-governmental organisations active in the field of human rights and democratisation: 
-<ul class="lista_con_pallini margin_bottom_20">
-	<li>Nada Al Nashif (United Nations Deputy High Commissioner for Human Rights, OHCHR; former Assistant Director-General for Social and Human Sciences)</li>
-	<li>Niccolò Figà Talamanca (Secretary General, No Peace Without Justice)</li>
-	<li>Kate Gilmore (former United Nations Deputy High Commissioner for Human Rights, OHCHR)</li>
-	<li>Lotte Leicht (EU Director, Human Rights Watch)</li>
-	<li>Goran Miletic (Director for Europe, Civil Rights Defenders)</li>
-	<li>Thomas Millar (Head of Unit DEVCO/B1 – Governance, Democracy, Gender, Human Rights, European Union)</li>
-	<li>Michael O’Flaherty (Director, EU Fundamental Rights Agency)</li>
-	<li>Luisella Pavan-Woolfe (Head of Office and Director, Council of Europe Venice Office)</li>
-	<li>Miriam Reventlow (Director of Operations, International Rehabilitation Council for Torture Victims)</li>
-	<li>Volker Tuerk (United Nations Assistant Secretary-General for Strategic Coordination; former Assistant High Commissioner for Protection, UNHCR)</li>
-	<li>UNESCO: representative to be confirmed</li>
-</ul>
+
+<p class="subtitle_page_programme">Secretary General</p>
+<p class="margin_bottom_20">The Secretary General bears primary responsibility for overall management, including administration of the European Commission grant and financial contributions made by other organisations.</p>
+<div class="table_accordion">
+    <div class="table_people_cell"><img class="img_persona" src="files/eiuc/staff/Manfred_Nowak_global_campus_eiuc.jpg" alt="Manfred Nowak - Global Campus">
+        <div class="description_page_programme no_border no_padding no_margin_bottom">
+            <p class="ruolo_persona titolo_gc_europe">Secretary General</p>
+            <p class="subtitle_page_programme margin_bottom_20">Manfred Nowak</p>
+            <p class="margin_bottom_20">Manfred Nowak is Professor of International Law and Human Rights at Vienna University and Director of the Vienna Master of Arts in Human Rights. He has been appointed as Secretary General of the GC/EIUC in January 2016.</p>
+            <div class="text_read_more">
+                <p class="margin_bottom_20">He served in various expert functions, such as UN expert on enforced disappearances (1993-2006), UN Special Rapporteur on Torture (2004-2010), judge at the Human Rights Chamber for Bosnia and Herzegovina (1996-2003) and Vice Chairperson of the EU Fundamental Rights Agency (2013-2018). In 2016 he was appointed Independent Expert leading the UN Global Study on Children Deprived of Liberty.</p>
+                <p class="margin_bottom_20">He was Director of the Netherlands Institute of Human Rights at Utrecht University (SIM: 1987-1989) and of the Ludwig Boltzmann Institute of Human Rights at Vienna University (BIM: 1992-2019) as well as Visiting Professor at the University of Lund (2002-2003), the Graduate Institute of International and Development Studies in Geneva (2008-2009), and at Stanford University in Palo Alto (2014).</p>
+                <p class="margin_bottom_20">He is author of more than 600 publications in the fields of public and international law and human rights.</p>
+                <!-- <div class="download"><a href="files/eiuc/staff/MANFRED_NOWAK_CV.pdf" download="files/eiuc/staff/MANFRED_NOWAK_CV.pdf"><img class="icona_download" src="files/eiuc/icona_download.svg" alt="icona download"></a>
+                    <p class="titolo_gc_europe"><a class="download" href="files/eiuc/staff/MANFRED_NOWAK_CV.pdf" download="">CV Download</a></p>
+                </div>
+                <p>Email: <a class="titolo_gc_europe" href="mailto:manfred.nowak@eiuc.org">manfred.nowak@eiuc.org</a><br> Phone: <a class="titolo_gc_europe" href="tel:+39 347 6263102">+39 347 6263102</a></p> -->
+            </div>
+            <div class="accordion accordion_gc_arab read_more">
+                <div class="icon_e_title_accordion">
+                    <div class="piu_accordion">
+                        <div class="verticale">[nbsp]</div>
+                        <div class="orizzontale">[nbsp]</div>
+                    </div>
+                    <p class="title_accordion more_less">Read More</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
