HRDA - Contact Us - Added phone and fax numbers

--- a/website/02-Education/hrda/02-contact-us.html
+++ b/website/02-Education/hrda/02-contact-us.html
@@ -6,6 +6,8 @@
 <p class="margin_bottom_20">0002</p>
 <p>Website: <a class="titolo_gc_africa" href="//www.chr.up.ac.za">www.chr.up.ac.za</a></p>
 <p>Email: <a class="titolo_gc_africa" href="mailto:chr@up.ac.za">chr@up.ac.za</a></p>
+<p>Tel: <a class="titolo_gc_africa" href="tel:+27 (0) 12 420 3810">+27 (0) 12 420 3810</a> / <a class="titolo_gc_africa" href="tel:+27 (0) 12 420 3034">+27 (0) 12 420 3034</a>
+<p>Fax: <a class="titolo_gc_africa" href="tel:+27 (0) 86 580 5743">+27 (0) 86 580 5743</a>
 <p>[nbsp]</p>
 <p>You can find more info on our social media</p>
 <p>Facebook: <a class="titolo_gc_africa" href="https://www.facebook.com/CentreforHumanRights/ ">https://www.facebook.com/CentreforHumanRights/</a></p>
