--- a/website/02-Education/hrda/01-about-part2.html
+++ b/website/02-Education/hrda/01-about-part2.html
@@ -1,12 +1,12 @@
 <p class="subtitle_page_programme">Master Details</p>
 <p class="margin_bottom_20">HRDA is a very intensive programme and mixes theoretical study with practical application. Particular attention is paid to human rights and democratisation as seen from an African perspective. </p>
-<div class="accordion margin_bottom_20 accordion_gc_south_europe">
+<div class="accordion margin_bottom_20 accordion_gc_africa">
     <div class="icon_e_title_accordion">
         <div class="piu_accordion">
             <div class="verticale rotated">[nbsp]</div>
             <div class="orizzontale">[nbsp]</div>
         </div>
-        <p class="title_accordion titolo_gc_south_east_europe">What</p>
+        <p class="title_accordion titolo_gc_africa">What</p>
     </div>
     <div class="text_accordion display_block">
         <p class=" margin_bottom_10">The programme is divided into two semesters and strives to equip African human rights defenders with:</p>
@@ -18,13 +18,13 @@
         </ul>
     </div>
 </div>
-<div class="accordion margin_bottom_20 accordion_gc_south_europe">
+<div class="accordion margin_bottom_20 accordion_gc_africa">
     <div class="icon_e_title_accordion">
         <div class="piu_accordion">
             <div class="verticale">[nbsp]</div>
             <div class="orizzontale">[nbsp]</div>
         </div>
-        <p class="title_accordion titolo_gc_south_east_europe">Who</p>
+        <p class="title_accordion titolo_gc_africa">Who</p>
     </div>
     <div class="text_accordion">
         <p class=" margin_bottom_20">The programme is realized with the support of lecturers, experts and practitioners from the partner universities and associate regional and international organizations such as IGO`s, NGO`s, research institutes and think tanks.</p>
@@ -46,13 +46,13 @@
         </ul>
     </div>
 </div>
-<div class="accordion margin_bottom_20 accordion_gc_south_europe">
+<div class="accordion margin_bottom_20 accordion_gc_africa">
     <div class="icon_e_title_accordion">
         <div class="piu_accordion">
             <div class="verticale">[nbsp]</div>
             <div class="orizzontale">[nbsp]</div>
         </div>
-        <p class="title_accordion titolo_gc_south_east_europe">Why</p>
+        <p class="title_accordion titolo_gc_africa">Why</p>
     </div>
     <div class="text_accordion">
         <p class="margin_bottom_10">The objectives of the programme are:</p>
