HRDA - Structure and Content Part2 - Minor fixes

--- a/website/02-Education/hrda/03-structure_and_content-part2.html
+++ b/website/02-Education/hrda/03-structure_and_content-part2.html
@@ -1,4 +1,4 @@
-<p class="subtitle_page_programme">First semester</p>
+<p class="subtitle_page_programme">First Semester</p>
 <p class="margin_bottom_20">From January to June</p>
 <p class="margin_bottom_20">The first semester is spent at the Centre for Human Rights, University of Pretoria, and is structured in six modules.</p>
 <div class="accordion margin_bottom_20 accordion_gc_africa">
@@ -29,7 +29,7 @@
         <p class="title_accordion titolo_gc_africa">Mixing theory and practice</p>
     </div>
     <div class="text_accordion">
-        <p class="margin_bottom_20">Teaching happens through formal lectures and practical exercises. Emphasis is placed on classroom participation. The study visits provide an excellent opportunity for students to interact with international experts who make a personal contribution to the general experience. Throughout the first semester, each student is assigned to a ‘clinical group’ which works on a practical human rights or democratisation issue with clear objectives and outcomes which forms part of the assessment. </p>
+        <p class="margin_bottom_20">Teaching happens through formal lectures and practical exercises. Emphasis is placed on classroom participation. The study visits provide an excellent opportunity for students to interact with international experts who make a personal contribution to the general experience. Throughout the first semester, each student is assigned to a ‘clinical group’ which works on a practical human rights or democratisation issue with clear objectives and outcomes which forms part of the assessment.</p>
         <p class="margin_bottom_10">Students are placed within the following units for the human rights clinic.</p>
         <ul class="lista_con_pallini margin_bottom_20">
             <li>Children’s Rights Unit</li>
